解决了DirectBufferDealloc垃圾回收从java8迁移到java17导致的内部API变动导致的错误